--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "@types/node": "^24.10.1",
+    "concurrently": "^9.2.1",
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "start": "concurrently \"npm run frontend\" \"npm run backend\"",
@@ -9,7 +11,9 @@
     "dev": "npm start"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.1.1",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "vite": "^7.2.4"
   }
 }
