--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://YOUR-BACKEND-URL.onrender.com/:path*"
+      "destination": "https://sdghackathon.onrender.com/:path*"
     }
   ]
 }
